# TransMIL

./: .gitignore  .pre-commit-config.yaml  Dockerfile  _train.py  pyproject.toml  requirements.in
.github/workflows/: build_container.yml
dataset_csv/test_dataset/: create_example_csv.py  fold0.csv
datasets/: test_data.py
src/transmil/: __init__.py  _train.py  config.py  entrypoint.py  train.py  train_bach.py
src/transmil/Camelyon/: TransMIL.yaml
src/transmil/MyLoss/: ND_Crossentropy.py  boundary_loss.py  dice_loss.py  focal_loss.py  loss_factory.py  sigmoid_bce_sum.py  test_loss.py
src/transmil/MyOptimizer/: optim_factory.py  radam.py
src/transmil/TestDataset/: TransMIL.yaml
src/transmil/dataset_csv/test_dataset/: create_example_csv.py  create_labels.py  fold0.csv
src/transmil/datasets/: camel_data.py  data_interface.py  neudeg_data.py  test_data.py
src/transmil/models/: TransMIL.py  model_interface.py
src/transmil/utils/: utils.py
