[tool.poetry]
name = "mcml-transmil"
version = "0.1.0"
description = ""
authors = ["Philipp Schroeppel <'69214052+pns1123@users.noreply.github.com'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
addict = "^2.2.1"
albumentations = "^0.4.3"
einops = "^0.3.0"
matplotlib = "^3.5.1"
numpy = "^1.20.3"
nystrom-attention = "^0.0.9"
opencv-python = "^4.2.0.34"
opencv-python-headless = "^4.2.0.34"
pandas = "^1.2.3"
Pillow = "^8.4.0"
pytorch-lightning = "^1.2.3"
torchvision = "^0.19.0"
pytorch-toolbelt = "^0.6.3"
tensorboard = "^2.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
