[project]
name = "transmil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py==2.1.0",
    "addict==2.4.0",
    "aiohappyeyeballs==2.4.0",
    "aiohttp==3.10.5",
    "aiosignal==1.3.1",
    "albumentations==0.4.6",
    "async-timeout==4.0.3",
    "attrs==24.2.0",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "einops==0.3.2",
    "filelock==3.15.4",
    "fonttools==4.53.1",
    "frozenlist==1.4.1",
    "fsspec==2024.6.1",
    "grpcio==1.66.0",
    "idna==3.8",
    "imageio==2.35.1",
    "imgaug==0.4.0",
    "jinja2==3.1.4",
    "kiwisolver==1.4.5",
    "lightning-utilities==0.11.6",
    "markdown==3.7",
    "markupsafe==2.1.5",
    "matplotlib==3.9.2",
    "mpmath==1.3.0",
    "multidict==6.0.5",
    "networkx==3.3",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.1.3.1",
    "nvidia-cuda-cupti-cu12==12.1.105",
    "nvidia-cuda-nvrtc-cu12==12.1.105",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.0.2.54",
    "nvidia-curand-cu12==10.3.2.106",
    "nvidia-cusolver-cu12==11.4.5.107",
    "nvidia-cusparse-cu12==12.1.0.106",
    "nvidia-nccl-cu12==2.20.5",
    "nvidia-nvjitlink-cu12==12.6.20",
    "nvidia-nvtx-cu12==12.1.105",
    "nystrom-attention==0.0.9",
    "opencv-python==4.10.0.84",
    "opencv-python-headless==4.10.0.84",
    "packaging==24.1",
    "pandas==1.5.3",
    "pillow==8.4.0",
    "protobuf==5.27.3",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0.post0",
    "pytorch-lightning==1.9.5",
    "pytorch-toolbelt==0.6.3",
    "pytz==2024.1",
    "pywavelets==1.7.0",
    "pyyaml==6.0.2",
    "scikit-image==0.19.3",
    "scipy==1.14.1",
    "shapely==2.0.6",
    "six==1.16.0",
    "sympy==1.13.2",
    "tensorboard==2.17.1",
    "tensorboard-data-server==0.7.2",
    "tifffile==2024.8.10",
    "torch==1.11.0",
    "torchmetrics==1.4.1",
    "torchvision",
    "tqdm==4.66.5",
    "triton==3.0.0",
    "typing-extensions==4.12.2",
    "werkzeug==3.0.4",
    "yarl==1.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
